--- a/src/Vistas/viewMenu.form
+++ b/src/Vistas/viewMenu.form
@@ -32,6 +32,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Listar personas"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jmiListarPersonasActionPerformed"/>
+              </Events>
             </MenuItem>
           </SubComponents>
         </Menu>
